added_core_logic_and_caching

--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Create Post{% endblock %}
+
+{% block main %}
+
+<div class="post-create">
+    <h2>Create Post</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn">Create Post</button>
+    </form>
+</div>
+
+{% endblock %}
