--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -14,21 +14,39 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-<aside>
-    <img src="{% static 'img/blog.svg' %}" alt="logo">
-    <span class="logo">log</span>
-    <hr>
-    <ul>
-        <a href="{% url 'blog:index' %}"><li><i class="bi bi-house"></i>Home</li></a>
-        <a href="{% url 'blog:post_list' %}"><li><i class="bi bi-pencil-square"></i>Posts</li></a>
-    </ul>
-    <hr>
-    <ul class="bottom-links">
-        <a href="{% url 'blog:login' %}"><li><i class="bi bi-person"></i>Login</li></a>
-    </ul>
-</aside>
-<main>
-    {% block main %}{% endblock %}
-</main>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 custom-col">
+            <div class="navbar">
+                <img src="{% static 'img/blog.svg' %}" alt="logo">
+                <ul>
+                    <a href="{% url 'blog:post_list' %}"><li><i class="bi bi-book"></i>Post list</li></a>
+                    <a href="{% url 'blog:create_post' %}"><li><i class="bi bi-pencil"></i>Create post</li></a>
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'blog:user_post_list' %}"><li><i class="bi bi-person-workspace"></i>User post list</li></a>
+                    {% endif %}
+                    <a href="{% url 'blog:feedback' %}"><li><i class="bi bi-chat-right-text "></i>Feedback</li></a>
+                </ul>
+                <hr sty>
+                <ul class="bottom-links">
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'blog:profile' %}"><li><i class="bi bi-person"></i>Profile</li></a>
+                        <p class="user_name">( {{ user.username }} )</p>
+                        <a href="{% url 'blog:logout' %}"><li><i class="bi bi-box-arrow-right"></i>Logout</li></a>
+                    {% else %}
+                        <a href="{% url 'blog:login' %}"><li><i class="bi bi-person-check"></i>Login</li></a>
+                        <a href="{% url 'blog:registration' %}"><li><i class="bi bi-person-plus"></i>Registration</li></a>
+                    {% endif %}
+                </ul>
+
+            </div>
+        </div>
+        <div class="col-md-9 custom-col">
+            <main>
+                    {% block main %}{% endblock %}
+            </main>
+        </div>
+    </div>
+</div>
 </body>
 </html>
