--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}{{ post.title }}{% endblock %}
+
+{% block main %}
+<div class="post-detail">
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.short_description }}</p>
+    <br>
+    <p>{{ post.content }}</p>
+    <br>
+    {% if post.image %}
+    <img src="{{ post.image.url }}" alt="{{ post.title }}">
+    {% endif %}
+    <p>Posted by: <a href="{% url 'blog:user_profile' post.owner.pk %}">{{ post.owner }}</a></p>
+    <p>Created at: {{ post.created_at }}</p>
+    <p>Updated at: {{ post.updated_at }}</p>
+</div>
+{% if user.is_authenticated and user == post.owner %}
+<div class="post-edit">
+    <a href="{% url 'blog:update_post' post.pk %}" class="btn btn-primary">Edit Post</a>
+</div>
+{% endif %}
+{% if comments_count %}
+<div class="post-comments">
+    <a href="{% url 'blog:post_comments' post.pk %}" class="btn btn-primary">See Сomments ({{ comments_count }})</a>
+    <a href="{% url 'blog:create_comment' post.pk %}" class="btn btn-primary">Create Сomments</a>
+    {% else %}
+    <a href="{% url 'blog:create_comment' post.pk %}" class="btn btn-primary">Create Сomments</a>
+</div>
+{% endif %}
+
+{% endblock %}
