--- a/blog/templates/blog/user_post_list.html
+++ b/blog/templates/blog/user_post_list.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}User Posts{% endblock %}
+
+{% block main %}
+<div class="user-post-list">
+    <h2>Your Posts</h2>
+    {% if user_posts %}
+    <ul>
+        {% for post in user_posts %}
+        <li>
+            <h6>{{ post.title }}</h6>
+            <p>{{ post.short_description }}</p>
+            <p class="detail-bottom"><a href="{% url 'blog:post_detail' post.id %}">Detail post</a></p>
+        </li>
+        {% endfor %}
+    </ul>
+
+    <div class="pagination">
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        {% endif %}
+        <span class="current-page">{{ page_obj.number }}</span>
+        <span>from</span>
+        <span class="total-pages"> {{ page_obj.paginator.num_pages }}</span>
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">Next</a>
+        {% endif %}
+    </div>
+    {% else %}
+    <p>You haven't created any posts yet.</p>
+    {% endif %}
+</div>
+{% endblock %}
