--- a/blog/templates/profile/update_profile.html
+++ b/blog/templates/profile/update_profile.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Edit Profile{% endblock %}
+
+{% block main %}
+<div class="edit-profile ">
+    <h2>Edit Profile</h2>
+    <form method="post" class="form-profile" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+        <button type="submit" class="btn btn-primary mt-3">Save Changes</button>
+    </form>
+    <p class="back-bottom"><a href="{% url 'blog:profile' %}">Back</a></p>
+</div>
+{% endblock %}
