--- a/blog/templates/registration/registration.html
+++ b/blog/templates/registration/registration.html
@@ -6,11 +6,11 @@
 
 <div class="features">
     <h1>Sign Up</h1>
-   <form method="POST" class="form-group">
-    {% csrf_token %}
-
-    <button type="submit" class="btn btn-success">Register</button>
-  </form>
+    <form method="post" class="form-align">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
 </div>
 
 
