--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -30,7 +30,7 @@
                 <hr sty>
                 <ul class="bottom-links">
                     {% if user.is_authenticated %}
-                        <a href="{% url 'blog:profile' %}"><li><i class="bi bi-person"></i>Profile</li></a>
+                        <a href="{% url 'blog:сurrent_user_profile' %}"><li><i class="bi bi-person"></i>Profile</li></a>
                         <p class="user_name">( {{ user.username }} )</p>
                         <a href="{% url 'blog:logout' %}"><li><i class="bi bi-box-arrow-right"></i>Logout</li></a>
                     {% else %}
